tests/errors/semantic/blocking/str_join.py
# pylint: disable=missing-function-docstring, missing-module-docstring
a = " ".join(["boy","girl"])
